@@ -42,6 +42,10 @@ builds of libjpeg-turbo to incorrectly encode a few specific test images when
 quality=98, an optimized Huffman table, and the slow integer forward DCT were
 used.
 
+[8] Resolved an issue whereby the "official" TurboJPEG static library for OS X/
+iOS would produce an undefined symbol error (_putenv$UNIX2003) when attempting
+to link the library with an i386 iOS application for the iOS simulator.
+
 
 1.4.0
 =====
